--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -298,6 +298,7 @@
             <figure>
                 <a href="https://www.textfixer.com/html/convert-text-html.php"><i>Text··HTML</i></a>
                 <a href="https://www.textfixer.com/html/html-to-text.php"><i>HTML··Text</i></a>
+                <a href="https://www.textfixer.com/html/convert-word-to-html.php"><i>Word··HTML</i></a>
             </figure>
             <figure>
                 <a href="https://www.textfixer.com/tools/alphabetical-order.php"><i>Text··ABC order</i></a>
@@ -334,14 +335,13 @@
         </section>
         <section c-dev>
 
-            <figure>
-                <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
-                <a href="http://veli.ee/colorpedia/"><i>Colorpedia</i></a>
-            </figure>
-
             <section c-hq>
                 <figure>
-                    <a b c href="https://webmaker.app/app/">HTML Editor</a>
+                    <a c href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
+                    <a c href="http://veli.ee/colorpedia/"><i>Colorpedia</i></a>
+                </figure>
+                <figure>
+                    <a b href="https://webmaker.app/app/">HTML Editor</a>
                     <a b href="https://www.photopea.com/"><i>Photopea</i></a>
                 </figure>
             </section>
