--- a/Snippets/html.html
+++ b/Snippets/html.html
@@ -125,6 +125,10 @@
 </head>
 <body>
 
+DIGITAL INPUT
+
+<input type="text" inputmode="numeric" pattern="[0-9]*">
+
     <section class="Māčūļī">
         <div>· &middot;</div>
         <div>✉</div>
