--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -377,7 +377,9 @@
                     <a href="http://www.niemanlab.org/journo-ipsum/">ipsum journo</a>
                 </figure>
                 <a href="http://kirillbelyaev.com/all/spaces/">Space chars</a>
-                <a href="https://gethead.info/"><i>◄Head►</i></a>
+                <section c-hq>
+                <a href="https://github.com/sindresorhus/awesome/#user-content-contents"><i>Frontend awesome</i></a>
+                </section>
             </section>
 
             <figure>
