--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -13,6 +13,17 @@
 
 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><polygon points="4 4, 20 4, 12 16"/></svg>
 
+<!-- ==================================================== Avatar Image-->
+
+<svg role="none" style="height: 36px; width: 36px;">
+  <mask id="avatar">
+    <circle cx="18" cy="18" fill="white" r="18"></circle>
+  </mask>
+  <g mask="url(#avatar)">
+    <image x="0" y="0" height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xlink:href="avatar.jpg" style="height: 36px; width: 36px;"></image>
+    <circle cx="18" cy="18" r="18"></circle>
+  </g>
+</svg>
 
 <!-- ==================================================== Gradient Sample -->
 
