--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -98,7 +98,7 @@
     <article>
         <section c-hq>
             <figure>
-                <a c href="https://facebook.com/"><i>FB</i></a>
+                <a c href="https://facebook.com/?sk=h_chr"><i>FB</i></a>
                 <a c href="https://www.instagram.com/zinoviasmartfon/">IN</a>
                 <a c href="http://www.youtube.com/"><i>YT</i></a>
                 <a c href="http://www.hattrick.org/"><i>HT</i></a>
