--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -201,21 +201,23 @@
             <a b c href="http://hackertyper.com/">[ Hacker Typer ]</a>
         </section>
         <section c-eg4>
+            <a b href="http://localhost:8080/">:8080</a>
+            <a b href="http://127.0.0.1/edsa-dev/">local dev/php</a>
             <a href="https://add-hosting.devops.care/wp-admin/network/">ADD network admin</a>
-            <a href="http://127.0.0.1/edsa-dev/">local dev/php</a>
         </section>
         <section c-eg4>
             <figure>
-                <a b c-eg2 href="https://github.com/zlsheepcity">GIT ZL</a>
-                <a b c-eg3 href="https://github.com/sheeptoday">Sheep</a>
+                <a b c-eg2 href="https://github.com/zlsheepcity?tab=repositories">GIT ZL</a>
+                <a b c-eg3 href="https://github.com/sheeptoday?tab=repositories">Sheep</a>
                 <a b c-eg1 href="https://github.com/kidou-shona">Shona</a>
             </figure>
             <figure>
                 
             </figure>
             <a c-eg2 href="https://zlsheepcity.github.io/appart/">appart</a>
+            <a c-eg2 href="https://zlsheepcity.github.io/zart/">zart</a>
             <a c-eg3 href="https://sheeptoday.github.io/appking/">appking</a>
-            <a c-eg3 href="http://sheep.today/">sheep.today</a>
+            <a c-eg3 href="https://sheeptoday.github.io/web.today/">sheep.today</a>
             <a c-eg1 href="https://kidou-shona.github.io/learning_Shona/">learning Shona</a>
         </section>
     </atricle>
