--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -95,29 +95,31 @@
                 <a c href="http://www.hattrick.org/"><i>HT</i></a>
             </figure>
         </section>
+
+        <!-- - - - - - - - - - - - - - - - - - - - - Sport -->
+
         <section c-ent>
             <figure>
                 <a b href="http://livetv.sx/allupcoming/" class="red bold">LiveTV</a>
             </figure>
             <a href="https://www.volleyballworld.tv/home">Volleyball World</a>
+            <a href="https://www.eurosportplayer.com/">Eurosport Player</a>
             <figure>
+                <a href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
                 <a href="http://www.biathlonworld.com/calendar/">IBU Calendar</a>
-                <a b href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
-            </figure>
-            <figure>
-                <a mini href="https://sport-tv.me/eurosport-online-ch">Eurosport</a>
-                <a mini href="http://www.laola1.tv/">Laola</a>
-                <a mini href="http://www.myfeed4u.net/section/other/">black</a>
             </figure>
             <a mini href="http://www.european-athletics.org/calendar/index.html"><i>european athletics calendar</i></a>
         </section>
-        <section c-science>
-            <a href="http://elementy.ru/"><i>elementy.ru</i></a>
-            <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
-            <a href="https://nplus1.ru/"><i>n+1</i></a>
-            <a href="https://golovanov.net/">golovanov.net</a>
-            <a b href="http://tabletopwhale.com/index.html">Science Illustr.</a>
-            <a b href="http://parismuseescollections.paris.fr/en">Paris Museums Imgs.</a>
+
+        <!-- - - - - - - - - - - - - - - - - - - - - Audio -->
+
+        <section c-dev3>
+            <a b href="https://poolside.fm/"><i>♪♪ Poolside Web-Chill</i></a>
+            <figure mini>
+                <a c href="https://www.youtube.com/watch?v=gfiPOgsNO2M">ATCH</a>
+                <a c href="https://www.youtube.com/watch?v=6uddGul0oAc">TKYO</a>
+                <a c href="https://www.youtube.com/watch?v=5qap5aO4i9A">LOFI</a>
+            </figure>
         </section>
         <section c-eg2>
             <figure>
@@ -151,47 +153,65 @@
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
     <!-- =================================================== [NEWS] -->
     <atricle c-news1>
+
+    <!-- - - - - - - - - - - - - - - - - - - - - Dev News -->
+
         <section c-news1>
-            <a href="https://news.ycombinator.com/"><i>HackerNews</i></a>
-            <a href="https://dev.to/"><i>dev.to</i></a>
             <figure>
-                <a href="http://www.habrahabr.ru/" class=""><i>habrahabr</i></a>
+                <a href="https://news.ycombinator.com/"><i>HackerNews</i></a>
+                <a href="https://dev.to/"><i>dev.to</i></a>
+            </figure>
+            <figure>
+                <a href="http://www.habr.com/ru/" class=""><i>Habrahabr</i></a>
                 <a b href="https://habr.com/ru/search/?target_type=posts&q=%D0%B4%D0%B0%D0%B9%D0%B4%D0%B6%D0%B5%D1%81%D1%82&order_by=date">digest</a>
             </figure>
-            <a href="http://artgorbunov.ru/bb/soviet/">Art Gorbunov</a>
-            <a href="http://css-tricks.com/">css-tricks</a>
-<!--
-            <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
-            <a href="http://www.jvetrau.com/">jvetrau</a>
-            <a href="http://www.smashingmagazine.com/">Smashing Mag</a>
             <a href="http://alistapart.com/">A List Apart</a>
-            <a href="https://uxplanet.org/">UX Planet</a>
- -->
-        </section>
-        <section c-news2>
-            <a href="http://langsam.ru/ris/">RIS design blog</a>
-            <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
-            <a href="http://svalko.org/"><i>Свалка</i></a>
-            <a href="http://gumilevica.kulichki.net/HE2/index.html">Лев Гумилёв: История</a>
-        </section>
-        <section c-news3>
-            <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurkmore</i></a>
-            <a href="https://posmotre.li/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:%D0%A1%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0"><i>posmotre.li</i></a>
-            <a href="https://etika.nplus1.ru/">Новая Этика</a>
-            <a href="http://arzamas.academy/"><i>arzamas</i></a>
-            <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
-        </section>
-        <section c-news1>
-            <a href="http://radiomap.eu/lv/play/merkurs"><i>♪ Radio Merkurs</i></a>
-            <a href="http://www.diary.ru/~musicbunker/"><i>♪ Folk</i></a>
-        </section>
-        <section c-dev3>
+            <a href="http://artgorbunov.ru/bb/soviet/">Art Gorbunov</a>
+            <a href="http://css-tricks.com/">CSS-Tricks</a>
+            <figure mini>
+                <a href="http://www.jvetrau.com/">Jury Vetrau</a>
+                <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
+            </figure>
            <figure>
-               <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪ Dev Podcasts</i></a>
-               <a href="https://shoptalkshow.com/"><i>♪♪ CTS</i></a>
+               <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪♪ Dev Casts</i></a>
+               <a b href="https://shoptalkshow.com/"><i>♪♪ STS</i></a>
            </figure>
-            <a href="https://poolside.fm/"><i>♪ Poolside Web-Chill</i></a>
         </section>
+
+    <!-- - - - - - - - - - - - - - - - - - - - - Science News -->
+
+        <section c-news2>
+            <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
+            <a href="https://golovanov.net/">golovanov.net</a>
+            <a b href="http://elementy.ru/"><i>elementy.ru</i></a>
+            <a href="http://arzamas.academy/"><i>arzamas</i></a>
+            <figure>
+                <a href="https://nplus1.ru/"><i>n+1</i></a>
+                <a href="https://etika.nplus1.ru/">Новая Этика</a>
+            </figure>
+        </section>
+
+    <!-- - - - - - - - - - - - - - - - - - - - - Social News -->
+
+        <section c-news3>
+            <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
+            <figure>
+                <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurk</i></a>
+                <a href="https://posmotre.li/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:%D0%A1%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0"><i>posmotre.li</i></a>
+            </figure>
+            <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
+            <a href="http://langsam.ru/ris/">RIS design blog</a>
+            <a href="http://tabletopwhale.com/index.html">Science Illustr.</a>
+            <a b href="http://svalko.org/"><i>Свалка</i></a>
+        </section>
+
+    <!-- - - - - - - - - - - - - - - - - - - - - Libs -->
+
+        <section c-science>
+            <a href="http://parismuseescollections.paris.fr/en">Paris Museums Imgs.</a>
+        </section>
+
+
     </atricle>
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
