--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -72,7 +72,7 @@
 
 
         <section c-dev>
-            <a href="http://10minutemail.com/" class="bold"><i>10min Mail</i></a>
+            <a href="https://temp-mail.org/" class="bold"><i>Temporary email</i></a>
             <a href="https://glvrd.ru/" class="red"><i>Glavred</i></a>
             <figure>
                 <a href="http://thepiratebay.org/"><i>pirate bay</i></a>
@@ -163,7 +163,7 @@
             </figure>
             <figure>
                 <a href="http://www.habr.com/ru/" class=""><i>Habrahabr</i></a>
-                <a b href="https://habr.com/ru/search/?target_type=posts&q=%D0%B4%D0%B0%D0%B9%D0%B4%D0%B6%D0%B5%D1%81%D1%82&order_by=date">digest</a>
+                <a b href="https://habr.com/ru/search/?q=%D0%B4%D0%B0%D0%B9%D0%B4%D0%B6%D0%B5%D1%81%D1%82&target_type=posts&order=date">digest</a>
             </figure>
             <a href="http://alistapart.com/">A List Apart</a>
             <a href="http://artgorbunov.ru/bb/soviet/">Art Gorbunov</a>
@@ -270,9 +270,7 @@
         </section>
         <section c-dev>
             <figure>
-                <a href="https://www.w3schools.com/tags/default.asp"><i>HTML</i></a>
-                <a href="http://www.w3schools.com/cssref/default.asp"><i>CSS</i></a>
-                <a href="https://www.w3schools.com/jsref/default.asp"><i>JS</i></a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/API">Web APIs</a>
             </figure>
             <figure>
                 <a href="http://caniuse.com/"><i>Caniuse</i></a>
