svg path editor

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -245,6 +245,15 @@
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
     <!-- =================================================== [LAST] -->
     <article c-dev>
+        <section c-dev>
+
+            <section c-hq>
+                <figure>
+                    <a href="https://yqnn.github.io/svg-path-editor/">SVG Path Editor</a>
+                </figure>
+            </section>
+
+        </section>
         <section c-science>
             <figure>
                 <a href="https://www.textfixer.com/html/convert-text-html.php"><i>Text··HTML</i></a>
