--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -250,6 +250,7 @@
             <section c-hq>
                 <figure>
                     <a href="https://yqnn.github.io/svg-path-editor/">SVG Path Editor</a>
+                    <a href="https://svgartista.net/">SVG Artista</a>
                 </figure>
             </section>
 
@@ -280,6 +281,7 @@
         <section c-dev>
             <figure>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/API">Web APIs</a>
+                <a href="https://htmldom.dev/">HTML DOM</a>
             </figure>
             <figure>
                 <a href="http://caniuse.com/"><i>Caniuse</i></a>
