--- a/zlhome/utub-music.html
+++ b/zlhome/utub-music.html
@@ -127,13 +127,13 @@
                 1em  -1px);
 /*
             clip-path: polygon(
-                -1px 1em,
-                -1px calc(101% - 0.5em),
+               -1px 1em,
+               -1px calc(101% - 0.5em),
                 1em 101%,
                 calc(101% - 1em) 101%,
                 101% calc(101% - 1em),
                 101% -1px,
-                1em -1px);
+                1em  -1px);
 */
         }
         .grid-item::before, .grid-item > * { grid-area: 1/1; }
@@ -159,7 +159,8 @@
                 hsla(var(--hue,0), 80%, 16%, 0.5) 42% );
 
             font-family: sans-serif;
-            font-size:   clamp(0.75rem, 0.8vw, 1.5rem);
+            font-size:   clamp(0.5rem, 0.8vw, 1.5rem);
+            line-height: 1.1;
 
             border-bottom: 0.5em solid hsla(var(--hue,0), 80%, 16%, 1);
         }
