--- a/zlhome/utub-music.html
+++ b/zlhome/utub-music.html
@@ -16,94 +16,86 @@
 
     <script>
         const UtubMusicList = {
-            '0j1To_VTc2U':'Non-Stop-Pop FM [GTA] #pop',
-            'HCP3NOKrdOc':'Vice City FM [GTA] #pop',
-            'ed1oIgcjlNc':'G-Funk / Hip Hop [GTA] #pop',
+
+            '0j1To_VTc2U':'Non-Stop-Pop FM [GTA]       #pop',
+            'HCP3NOKrdOc':'Vice City FM [GTA]          #pop',
+            'ed1oIgcjlNc':'G-Funk / Hip Hop [GTA]      #pop',
             'YYIBtojKDSc':'Los Santos Rock Radio [GTA] #pop',
-         // '1EgzvciFQ2I':'Pop songs to sing in the car #pop',
 
-            'DyY9Wpfajqo':'Mojave Radio [Fallout] #happy',
+            'DyY9Wpfajqo':'Mojave Radio [Fallout]     #happy',
             'FHF6q1mBiFs':'Appalachia Radio [Fallout] #happy',
-            'nUp_34Vs000':'11 hours of Soft Rock #pop',
+            'nUp_34Vs000':'11 hours of Soft Rock      #pop',
 
-            'techno-skip-1':'#skip', //////////////////
-            'nkb_zdbHMBw':'Giolì & Assia @Etna Volcano #techno',
+          '----skip-tch1':'#skip',
+            'nkb_zdbHMBw':'Giolì & Assia @Etna Volcano   #techno',
             'KOOaIea7lPE':'Nicola Cruz Boiler Room Tulum #techno',
             '3q8nGnls1Ow':'Journey Into Abstract Hip-Hop #relax',
-            'ZSzMNRM81V8':'Acid Arab #techno',
+            'ZSzMNRM81V8':'Acid Arab                     #techno',
 
-            'o8zi46NPIrY':'Workout Hip Hop 1 #energy',
-            'EIEiEqKbdZ4':'Workout Hip Hop 2 #energy',
-            'uNqwoMZz7uk':'Workout Rock #energy',
-         // 'bPqbTuI1Xpc':'Workout Pop #pop',
+            'o8zi46NPIrY':'Workout Hip Hop 1          #energy',
+            'EIEiEqKbdZ4':'Workout Hip Hop 2          #energy',
+            'uNqwoMZz7uk':'Workout Rock               #energy',
             '82uTuWxTJS4':'Iron Maiden, Greatest hits #energy',
-            '5DjaCFdLWj8':'Wagakki 和楽器バンド #energy',
-            'workout-skip-1':'#skip', //////////////////
+            '5DjaCFdLWj8':'Wagakki 和楽器バンド         #energy',
+          '----skip-wrk1':'#skip',
 
-            '5qap5aO4i9A':'Lofi beats to relax/study #relax',
+            '5qap5aO4i9A':'Lofi beats to relax/study       #relax',
             '6uddGul0oAc':'TOKYO Cafe: Relaxing Jazz Piano #relax',
 
-            'hcLwG6kHEcA':'Andrea Bocelli #relax',
-            'IxJQ8VKc4k4':'Edith Piaf #happy',
+            'hcLwG6kHEcA':'Andrea Bocelli                   #relax',
+            'IxJQ8VKc4k4':'Edith Piaf                       #happy',
             'nz3I6OFXIIg':'Marilyn Manson, The Pale Emperor #happy',
-            'g5wlBqWSgxk':'Высоцкий, студийные записи #happy',
-            //////////
-            //////////
+            'g5wlBqWSgxk':'Высоцкий, студийные записи       #happy',
 
-            'concert-skip-1':'#skip', //////////////////
-            'h1BsKIP4uYM':'Heilung, Castlefest 2017 #energy',
+          '----skip-liv1':'#skip',
+            'h1BsKIP4uYM':'Heilung, Castlefest 2017  #energy',
             'I5AOg8rTGHU':'Parov Stelar, Sziget 2018 #pop',
-            '3DihvVQtIZ0':'Aurora, Glastonbury 2019 #happy',
+            '3DihvVQtIZ0':'Aurora, Glastonbury 2019  #happy',
             'XXVwFvkNTEg':'Aurora, Nidarosdomen 2017 #happy',
-            'ZYowY7tvBbY':'Shpongle, London 2013 #techno',
-            //////////
+            'ZYowY7tvBbY':'Shpongle, London 2013     #techno',
 
             'f3wOS11SP9I':'Japanese Trap & Bass DENSETSU #techno',
-            'ALw5Zdm7BVc':'Japanese Trap & Bass KUCHIKI #techno',
-            'thd6h-ZZIfo':'Art of Techno Deep Radio #techno',
-            'kHCn5h4_dh0':'Programming music vol.1 #relax',
-            '1-_tyTJHgB8':'Programming music vol.15 #energy',
-            'hqVJpfFkJ9k':'Hard Neurofunk Drum & Bass #energy',
+            'ALw5Zdm7BVc':'Japanese Trap & Bass KUCHIKI  #techno',
+            'thd6h-ZZIfo':'Art of Techno Deep Radio      #techno',
+            'kHCn5h4_dh0':'Programming music vol.1       #relax',
+            '1-_tyTJHgB8':'Programming music vol.15      #energy',
+            'hqVJpfFkJ9k':'Hard Neurofunk Drum & Bass    #energy',
 
             'W0CBzKfvA80':'Thievery Corporation, Saudade #relax',
-            'T_Ne2Zs5754':'Smoke city, Underwater love #relax',
-            'b5H3b_Hh0Lw':'Mose ft. Suyana DeepBeats #techno',
-            'HASSwtB1TR0':'Mountain Dub #relax',
-            'eaOX-3yhYkk':'Hinkstep, The First Steps #relax',
-            'bRzRUfPipmg':'Dimmat, Karma #techno',
-            
+            'T_Ne2Zs5754':'Smoke city, Underwater love   #relax',
+            'b5H3b_Hh0Lw':'Mose ft. Suyana DeepBeats     #techno',
+            'HASSwtB1TR0':'Mountain Dub                  #relax',
+            'eaOX-3yhYkk':'Hinkstep, The First Steps     #relax',
+            'bRzRUfPipmg':'Dimmat, Karma                 #techno',
+
         };
-        /*
-        pop
-        happy
-        relax
-        energy
-        techno
-        */
     </script>
 
     <style>
-        .genre-pop     { --hue: 32; }
+        .genre-pop     { --hue:  32; }
         .genre-happy   { --hue: 122; }
         .genre-relax   { --hue: 202; }
-        .genre-energy  { --hue: 322; }
         .genre-techno  { --hue: 262; }
+        .genre-energy  { --hue: 322; }
 
         body {
-            background-color: hsl(204, 8%, 38%);
             background-color: hsl(226, 15%, 12%);
-            color: hsl( 66, 61%, 88%);
+            color:            hsl( 66, 61%, 88%);
         }
+
         .grid {
-            display: grid;
-            padding: 0.5em;
+          --space: 0.5em;
+          --double-space: calc( 2*var(--space) );
+            grid-gap: var(--space);
+            padding:  var(--space);
             padding-bottom: 4em;
-            grid-gap: 0.5em;
+
+            display: grid;
+
             grid-template-columns: repeat(6, 1fr);
           --item-height-ratio:     calc(9/16);
           --image-hover-scale:     1.2;
           --image-hover-action:    transform 240ms ease-out;
-          --overlay-opacity: 0.64;
         }
         .grid-item:hover {
           --image-scale: var(--image-hover-scale);
@@ -112,29 +104,15 @@
         .grid-item {
             display:  grid;
             overflow: hidden;
-            clip-path: polygon(
-                0 0,
-                0 100%,
-                calc(100% - 1.5em) 100%,
-                100% calc(100% - 1.5em),
-                100% 0);
-            clip-path: polygon(
-               -1px 1em,
+          --item-clip-path: polygon(
+               -1px var(--double-space),
                -1px 101%,
-                calc(101% - 1em) 101%,
-                101% calc(101% - 1em),
+                calc( 101% - var(--double-space) ) 101%,
+                101% calc( 101% - var(--double-space) ),
                 101% -1px,
-                1em  -1px);
-/*
-            clip-path: polygon(
-               -1px 1em,
-               -1px calc(101% - 0.5em),
-                1em 101%,
-                calc(101% - 1em) 101%,
-                101% calc(101% - 1em),
-                101% -1px,
-                1em  -1px);
-*/
+                var(--double-space) -1px
+                );
+            clip-path: var(--item-clip-path);
         }
         .grid-item::before, .grid-item > * { grid-area: 1/1; }
         .grid-item::before {
@@ -145,37 +123,37 @@
         .grid-item-caption {
             z-index: 1;
             display: grid;
+
             align-items: end;
-            padding: 0.5em;
+            padding: var(--space);
             padding-bottom: 0;
-            text-decoration: none;
-
-            color: white;
-            background-color: hsla(var(--hue,0), 80%, 16%, var(--overlay-opacity, 0.5));
-
-            background: linear-gradient(
-                0deg,
-                hsla(var(--hue,0), 80%, 16%, 1),
-                hsla(var(--hue,0), 80%, 16%, 0.5) 42% );
 
             font-family: sans-serif;
             font-size:   clamp(0.5rem, 0.8vw, 1.5rem);
             line-height: 1.1;
+            text-decoration: none;
 
-            border-bottom: 0.5em solid hsla(var(--hue,0), 80%, 16%, 1);
+            color: white;
+
+          --hsl: var(--hue, 0), 80%, 16%;
+            background: linear-gradient(
+                0deg,
+                hsla( var(--hsl), 1 ),
+                hsla( var(--hsl), 0.5) 42% );
+            border-bottom: 0.5em solid hsla( var(--hsl), 1 );
         }
 
         .grid-item-image {
             position: relative;
             z-index: 0;
             transition: var(--image-hover-action);
-            transform: scale( var(--image-scale, 1) );
+            transform:  scale( var(--image-scale, 1) );
         }
         .grid-item-image img {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
+            top:    0;
+            left:   0;
+            width:  100%;
             height: 100%;
             object-fit: cover;
         }
@@ -184,7 +162,7 @@
 
     <main class="grid">
     <!--
-        <figure class="grid-item" style="--hue:202">
+        <figure class="grid-item genre-pop">
             <div class="grid-item-image">
                 <img src="utub-images/YYIBtojKDSc.png" alt="">
             </div>
@@ -196,6 +174,7 @@
     </main>
 
     <script>
+        const genreClassName = key => ['genre-', key].join('');
         const itemImage = id => ['utub-images/', id, '.png'].join('');
         const itemLink  = id => ['https://www.youtube.com/watch?v=', id].join('');
         const itemData  = id => ({
@@ -203,36 +182,39 @@
             caption: (UtubMusicList[id] || 'caption#genre').split('#')[0].trim(),
             genre:   (UtubMusicList[id] || 'caption#genre').split('#')[1],
         });
-        const genreClassName = key => ['genre-', key].join('');
 
-        const domGrid = document.querySelector('.grid');
+        
 
+        const ConstructGridCard = (elCard, item) => {
+            const elImageWrap = document.createElement('div');
+            const elImageTag  = document.createElement('img');
+            const elUtubLink  = document.createElement('a');
+
+            elUtubLink.classList.add('grid-item-caption');
+            elUtubLink.href = itemLink(item.id);
+            elUtubLink.innerHTML = item.caption;
+
+            elImageTag.src = itemImage(item.id);
+            elImageTag.alt = '';
+            elImageWrap.classList.add('grid-item-image');
+            elImageWrap.appendChild(elImageTag);
+
+            elCard.classList.add('grid-item');
+            elCard.classList.add( genreClassName(item.genre) );
+            elCard.appendChild(elImageWrap);
+            elCard.appendChild(elUtubLink);
+        };
+
+        // RUN
+
+        const DOMGrid = document.querySelector('.grid');
         for (id in UtubMusicList) {
             const item = itemData(id);
-            let elItemCard  = document.createElement('figure');
-
-            if (item.genre !== 'skip') {
-                const elImageWrap = document.createElement('div');
-                const elImageTag  = document.createElement('img');
-                const elUtubLink  = document.createElement('a');
-
-                elUtubLink.classList.add('grid-item-caption');
-                elUtubLink.href = itemLink(item.id);
-                elUtubLink.innerHTML = item.caption;
-
-                elImageTag.src = itemImage(item.id);
-                elImageTag.alt = '';
-                elImageWrap.classList.add('grid-item-image');
-                elImageWrap.appendChild(elImageTag);
-
-                elItemCard.classList.add('grid-item');
-                elItemCard.classList.add( genreClassName(item.genre) );
-                elItemCard.appendChild(elImageWrap);
-                elItemCard.appendChild(elUtubLink);
-            }
-
-            domGrid.appendChild(elItemCard);
+            const elem = document.createElement('figure');
+            if (item.genre !== 'skip') ConstructGridCard(elem, item);
+            DOMGrid.appendChild(elem);
         };
+
     </script>
 
 </body>
