--- a/Tools/utub-music-list/index.html
+++ b/Tools/utub-music-list/index.html
@@ -11,6 +11,8 @@
             border:  0;
         }
     </style>
+    <meta name="theme-color" content="#314159">
+    <link rel="icon" href="../../favicon.svg">
 </head>
 <body>
 
