--- a/Tools/utub-music-list/index.html
+++ b/Tools/utub-music-list/index.html
@@ -19,7 +19,7 @@
      content="https://zlsheepcity.github.io/zlEpic/Tools/utub-music-list/utub-music-list-2022.jpg" />
     <meta property="og:image:width"  content="1280" />
     <meta property="og:image:height" content="698" />
-    <meta property="og:type"         content="article" />
+    <meta property="og:type"         content="website" />
     <meta property="og:locale"       content="en_US" />
     <meta property="og:title"        content="ZL Utub Music List" />
     <meta property="og:description"  content="Bookmarks for music that I listen to a lot" />
